crates/carta/tests/snapshots/golden_e2e__dokuwiki__native__list-deep-first.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ CodeBlock
    ( "" , [] , [] )
    "  * a first list item indented four columns is read as indented code\n"
]
