crates/carta/tests/snapshots/golden_e2e__dokuwiki__native__monospace-flanking.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Para
    [ Str "\8217\8217"
    , Space
    , Str "x"
    , Space
    , Str "\8217\8217"
    ]
, Para
    [ Str "a" , Space , Str "\8217\8217" , Space , Str "b" ]
]
